@@ -8,6 +8,7 @@ DIST admin-tools-0.15.tar.bz2 8306 SHA256 528f40ad2619807a988839af30cebd9f8ded95
 DIST admin-tools-0.16.tar.bz2 8448 SHA256 e982f9a806b814f7a8f15075d7696df1b927edc0e25e147f7da74ed67182bfd5 SHA512 6328e9307bd897cc51876c08ec9b41f4d56358fdc0149a181c1def21ccd1f027d03ff33378053725842a8cc1a6e24a0403970c4d88442d7cb40aceecb97012f9 WHIRLPOOL 001dbf63a7ab86398d96f724dd6aae6919d1da945e3c818feedfbc76b73e8f1e3e625e75bbfda9cf48444f69bb715acd2ebc17cb006bbe976cee968b7695394b
 DIST admin-tools-0.17.tar.xz 8640 SHA256 451d0cda75a8187aa3a031bfd87b23d52c90e0511ba369bdd4e88c958a6d831d SHA512 8d7ed2f82d16670a56b0eec35b41e0ab49beab5665e66ffc298ea1e63ed1ab086e6e99770cbe9f9b46a807542c451c42262422dc8bb5991ed26cc169dd1a2861 WHIRLPOOL fc9d39c1055abae78c47c418cc7afce56627a0d7b3207b0510d237466276a6b11da2cfccb8742a358faa5450af41534ba9825613eebe81c0806e59439c3098c4
 DIST admin-tools-0.18.tar.xz 9168 SHA256 f204d2477fc0765a7833e6c1a4ddeb56ed49a658c0679981f7107b437f1758b7 SHA512 302e37af7e1fb29e4dbf9625eab0faf428a5decc6d68537b3738a35ee4e8e4d4823206eaf9ae803aa8fb1dedd73203568f8d0043451af35bd2af7129add61c44 WHIRLPOOL 09ade3f22a93e024eb4c764c426020207267a4e785f90eac705837d251ad89a1310313d437036dd3564e8dba2bc8758edea557bd0c514b6a355c533a56fd5213
+DIST admin-tools-0.19.tar.xz 9208 SHA256 35ddf5fbff0c3c0ed19640b2a71fcec8bf355f1e2bc04d4ecc28390c9eb5b8f3 SHA512 e35fbe254e51021fdfb27708a10e8d0d43b0a5ffa8e3efa9ad1e2d2be71a04c1e6f50ebfebeb9f267a5c1d31281b4ac6c6656435d3161392d18b7de051ba332e WHIRLPOOL 0035b2497882b4c556098ba74a06c6ff83c576853c0e2cdf09029db0e1e1334b91dde95dafa20680c7a04b88487f8fe51de0fb8aafb37f32b35d97b6184ce0c4
 EBUILD admin-tools-0.12.ebuild 785 SHA256 860c75b7444ce32fec2321a4e4fa7b23e2ee42d045b930ff8ea2b4c939cd2588 SHA512 f0cdd2b69cfabfb58ea620c6922113cd6dcb3266833b5274aec418e442aa24770e8383c75720516ce634e6624edbe85ed56877afe633f67695268aeaa5e77929 WHIRLPOOL 474c939a0119bebe5d8b0c0cfff3991a6d88a0fa4b81cdeb3e0282d94e736a153c068b5ccafc4972d9ae5c88c74c3ed5f10efe237b9d3e283e0895696f0e84fb
 EBUILD admin-tools-0.13.ebuild 785 SHA256 860c75b7444ce32fec2321a4e4fa7b23e2ee42d045b930ff8ea2b4c939cd2588 SHA512 f0cdd2b69cfabfb58ea620c6922113cd6dcb3266833b5274aec418e442aa24770e8383c75720516ce634e6624edbe85ed56877afe633f67695268aeaa5e77929 WHIRLPOOL 474c939a0119bebe5d8b0c0cfff3991a6d88a0fa4b81cdeb3e0282d94e736a153c068b5ccafc4972d9ae5c88c74c3ed5f10efe237b9d3e283e0895696f0e84fb
 EBUILD admin-tools-0.14.ebuild 785 SHA256 860c75b7444ce32fec2321a4e4fa7b23e2ee42d045b930ff8ea2b4c939cd2588 SHA512 f0cdd2b69cfabfb58ea620c6922113cd6dcb3266833b5274aec418e442aa24770e8383c75720516ce634e6624edbe85ed56877afe633f67695268aeaa5e77929 WHIRLPOOL 474c939a0119bebe5d8b0c0cfff3991a6d88a0fa4b81cdeb3e0282d94e736a153c068b5ccafc4972d9ae5c88c74c3ed5f10efe237b9d3e283e0895696f0e84fb
@@ -15,13 +16,14 @@ EBUILD admin-tools-0.15.ebuild 771 SHA256 5a34af71c6029a8d6e692f5864339a1bfdf9d1
 EBUILD admin-tools-0.16.ebuild 786 SHA256 cba2c59b4f3cf659ee7e245140db9d388f5aeb3c7c4b08679e6c378c9629ed31 SHA512 e1f4768f4db93bc06210ca942d28fdf36ed30ba1a468f0a28802080b6c7031d29b89c258c94d2c95aad9bb39cafde09f3e809b0abe0445c0f029fd8107eede53 WHIRLPOOL 69bef3130a6e8b54d8ac51a4ce911e49e72846ebe975050fae0677761419289e3dcffdf76afbd3d1dcbd09636f34ed994ac82abb5d00258e085eece89bd2e0af
 EBUILD admin-tools-0.17.ebuild 736 SHA256 f16960bd2d4cdb400ed4e30ff805ee4f7b0a4833ca2316533c68ef296fbeda5f SHA512 f82012bf79ae72d1955b5f5c9927590b93039d6b8fa19af734fd5546011590aec10bc5203ed2381879c92e0142ba667fef863a204747deb42f774e94ddf91873 WHIRLPOOL 2e866d8cbad36690d9a68e73fc898219ccba871a56bf427fffb689d3dbf1fdc7461eff7c4259f0752e99fbcd1237577cf9749641322d670e65825c4531126e08
 EBUILD admin-tools-0.18.ebuild 767 SHA256 4fee096356e5ca68a33f7f6fdc817bf6c9c94162268aa8771bdf3d546f7e5574 SHA512 4d878995f19eadeab53e2071a2b304c89f04fd4ebf10ec8e08dc2ac793e3c5054f04ea16351974c480836608dbb6e9419290187a11639ee348949316b18f84a1 WHIRLPOOL f5b6af0761428b12fb38621e507ea68be525957d45e406749efbab52f2de820079426d1e8dfe23b6fa58175aab97f3c56544d6da9181453c98bfd696123c7855
-MISC ChangeLog 1438 SHA256 746f23d418f3900cb73a1d2f4e0b3defd9e1ef6d120570baec4d49772a2cca76 SHA512 5c6dfe67fdc58f4238d6753e758d63ecaf138186537ee795a7645d93ac97267e5f09e5211eb34f598eb052340609db1d191e351597dd348d1a574455cabd1a62 WHIRLPOOL 8133e3118881dc5efb0cfef5bd05c459a7b5ec5e7c0845e3e53bd7f91e6c59a29ab97128e40698917bba9b7e40f0ac31f0e34ba5741a22dbaaef11a9b02f34b7
+EBUILD admin-tools-0.19.ebuild 785 SHA256 b37bd5b2377e05f59cc02d153d84c105a2e5e2a83fde8e7d2d946822d3a22337 SHA512 ac57e312eb083ef200edebe00d49ac5fffeb5fb3acb19b448309e29dce3123fc8f85f086a829ac5cd0a0a51d57da86ff93a31477859efb5a51c1d1d91ff05f6b WHIRLPOOL eb24c820047011c78cadd5da12a62362a6b62779d66a76be00e92b001f2a90f748a209ab1a4786f8661320bba29f23b5aff09bfcce5a3ea7f4a09a1e63104ca3
+MISC ChangeLog 1583 SHA256 8089d328e8984818e70181449a298883a7633cab79831fb8935d47b574e5ff34 SHA512 005e4c54a55348dc63df9bfc5446b08c0afbfd5ff7b27e5c4765a1506d50140d08a8ccdcc8d924d9183a89e763f4c8acdaf300dbedd3ec5f4527075b4c0ce99e WHIRLPOOL cd7cf07c96ac625f9ef4fcd18918ef9884ef583040f3d2761ffe34422c7e424ce869b1a6e59ae8106d83587b9ffe1f8991741f255212283ad9bf10070aca2741
 MISC metadata.xml 337 SHA256 5df45f7426a07d92469d95f5de555af1aaad42f56c74baaa6ac2b85a8c36c560 SHA512 cae9112f2b2ee9bdc24ae0a7a12a835d4d8a26c8e6b231bbf10c664b3832d39ce0c153c74f7b05a3029e117ebd759edf01c1cc398d38b6609d3a80fbacbed055 WHIRLPOOL acd8e7ff5daf2222fa01b546b67b7bb601c765a31e00dad85955db164805b7acc521b1df9833f75f40c8dad58478572b0caf09fc67289f2799de55badccb7e24
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/PEjMACgkQgAnW8HDreRY9fwCgoXv8pQoKi/ggjHwMkm88+H4s
-/kkAnAroADrDV4AUZe9m8FOJONJyjaIh
-=YIB4
+iEYEAREKAAYFAk/d05gACgkQgAnW8HDreRbiJQCfSRmRqIT39IFKc8WEd2uVDgsq
+BnYAoKkpefa2pM1jzK+tzEuAcpEO2DIC
+=RRQO
 -----END PGP SIGNATURE-----
